--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -30,6 +30,7 @@
     box-shadow: 5px 5px 5px lightgray;
     top:0px;
     max-width: 81%;
+    border-radius: 0em 1em 0em 0em;
 }
 .width100 {
     position: fixed;
