--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1,7 +1,7 @@
     mat-drawer {
         margin-top      : 65px;
         width           : 300px;
-        background-color: #20639B;
+        background: #20639b;
         height: 100%;
     }
     .top70{
