--- a/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
+++ b/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
@@ -1,16 +1,16 @@
 <mat-card>
-    <mat-card-title>Student Details</mat-card-title>
+    <mat-card-title>Student</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="center center">
             <mat-form-field appearance="outline">
-                <mat-label>Roll no.</mat-label>
-                <input formControlName="RollNo" autocomplete="Off" matInput maxlength="50">
+                <mat-label>Admission Id</mat-label>
+                <input formControlName="StudentId" autocomplete="Off" matInput maxlength="5">
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Name</mat-label>
                 <input formControlName="Name" autocomplete="Off" matInput maxlength="50">
-            </mat-form-field>
+            </mat-form-field>            
             <mat-form-field appearance="outline">
                 <mat-label>Father</mat-label>
                 <input formControlName="FatherName" autocomplete="Off" matInput maxlength="50">
@@ -55,19 +55,7 @@
                     <mat-cell *matCellDef="let element">
                         {{element.MotherName}}
                     </mat-cell>
-                </ng-container>
-                <!-- <ng-container matColumnDef="FatherContactNo">
-                    <mat-header-cell *matHeaderCellDef>Father's Contact No. </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.FatherContactNo}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="MotherContactNo">
-                    <mat-header-cell *matHeaderCellDef>Mother's Contact No. </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.MotherContactNo}}
-                    </mat-cell>
-                </ng-container> -->
+                </ng-container>            
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                     <mat-cell style="justify-content: center;" *matCellDef="let element">
@@ -80,25 +68,17 @@
                     <mat-cell *matCellDef="let element">                        
                         <button matTooltip="Details" mat-mini-fab (click)="view(element.StudentId)">
                             <mat-icon>pageview</mat-icon>
-                        </button>
-                        <button matTooltip="class" mat-mini-fab (click)="class(element.StudentId)">
-                            <mat-icon>group</mat-icon>
-                        </button>                       
-                        <button matTooltip="fee payment" *ngIf="element.ClassName.length>0" mat-mini-fab (click)="fee(element.StudentId)">
-                            <mat-icon>view_list</mat-icon>
-                        </button>
+                        </button>                     
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
             </mat-table>
         </div>
-
-        <!-- 
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
-        </mat-menu> -->
-
     </mat-card-content>
+    <mat-card-actions fxLayoutAlign="center center">
+        <button (click)="exportArray()" matTooltip="export to excel" class="mat-raised-button">
+            <mat-icon>download</mat-icon>
+        </button>
+    </mat-card-actions>
 </mat-card>
