--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding-left: 10px;
   padding-right: 10px;
-  border-bottom: solid 1px rgba(0,0,0,.12);
+  border-bottom: solid 1px #1a598b;
   height: 48px;
 }
 img{
