--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="contentbody">
     <mat-card-title>{{Title|titlecase}}</mat-card-title>
     <mat-card-subtitle *ngIf="ParentPage.length>0">{{ParentPage}} > {{Title}}</mat-card-subtitle>
     <mat-card-content>
