--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.scss
@@ -1,8 +1,11 @@
+ng-material-multilevel-menu{
+  top:200px;
+}
 .my-cool-menu-item {
   display: flex;
   padding-left: 10px;
   padding-right: 10px;
-  border-bottom: solid 1px #1a598b;
+  border-bottom: solid 1px #3C99DC;
   height: 48px;
 }
 img{
