--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,9 +3,9 @@ footer{
     justify-content: center;
     padding:10px;
     color:white;
-    background-color:rgb(197, 101, 76);// #98bcda;
+    background-color:#0F5298;// #98bcda;
     font-size: small;
-    max-width: 81%;
+    //max-width: 81%;
 }
 @media screen and (max-width: 600px) {
    .bottom
