--- a/src/app/modules/FeesManagement/student/addstudent/addstudent.component.html
+++ b/src/app/modules/FeesManagement/student/addstudent/addstudent.component.html
@@ -326,7 +326,7 @@
                             </button>
                         </mat-card-actions>
                     </mat-tab>
-                    <mat-tab label="Documents">
+                    <mat-tab *ngIf="Id>0" label="Documents">
                         <upload-student-document></upload-student-document>
                     </mat-tab>
                     <mat-tab *ngIf="Id>0" label="Class">
