--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,27 +1,8 @@
 .logo1{
     padding: 0px 5px;
-    font-size: 16px;
+    font-size: 26px;
     line-height: 18px;
 }
-// .item {
-//     float:left;
-//     border: none;
-// }
-// .container{
-//     display: flex;
-
-// }
-// @media screen and (max-width: 600px) {
-//     div.trainup {
-//       display: none;
-      
-//     }
-//     .top {
-//         max-width: 100%;
-        
-//     }
-   
-//   }
 .width81 {
     position: fixed;
     z-index: 10;
@@ -29,32 +10,36 @@
     background-color: #20639b; //#4f8ec2;//
     box-shadow: 5px 5px 5px lightgray;
     top:0px;
-    max-width: 81%;
-    border-radius: 0em 1em 0em 0em;
+    //max-width: 81%;
+    //border-radius: 0em 1em 0em 0em;
 }
 .width100 {
     position: fixed;
     z-index: 10;
     color           : white;
-    background-color: #20639b; //#4f8ec2;//
-    box-shadow: 5px 5px 5px lightgray;
+    background: url('../../../../assets/images/headerimg.svg');
+    background-size: cover;
+    //background-repeat: no-repeat;
+    //background-size: cover;
+    background-color: #0F5298; //#4f8ec2;//
+    box-shadow: 5px 5px #0F5298;
     top:0px;
     max-width: 100%;
 }
 // .mat-button{
 //     line-height: 55px;
 // }
-// .rightside{
-//     background-color:black;// rgb(218, 143, 125);//rgb(197, 101, 76); //rgb(128, 60, 94);//navy;
-//     padding:5px;
-//     color:white;
-//     //opacity: 1.5;
-//     clip-path: polygon(0 30%, 99% 1%, 100% 90%, 0% 100%);
-//     }
+.rightside{
+    background-color:black;// rgb(218, 143, 125);//rgb(197, 101, 76); //rgb(128, 60, 94);//navy;
+    padding:5px;
+    color:white;
+    //opacity: 1.5;
+    clip-path: polygon(0 30%, 99% 1%, 100% 90%, 0% 100%);
+    }
 button {
     border : none;
     outline: none;
 }
-// .mat-icon {
-//     vertical-align: middle;
-//  }
+.mat-toolbar-row{
+    height: 150px !important;
+}
