--- a/src/app/shared/components/newsdashboard/newsdashboard.component.scss
+++ b/src/app/shared/components/newsdashboard/newsdashboard.component.scss
@@ -1,3 +1,7 @@
+:host{
+  border-radius: 2em;
+  padding: 3px;
+}
 .mat-badge-content {
   width      : 30px;
   height     : 30px;
@@ -59,7 +63,7 @@ a:hover {
 }
 
 .child1 {
-  flex: 1
+  color: white;
 }
 
 .child2 {
